--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <div className="container"></div>
+    <div class="container"></div>
     <script src="index.jsx" type="module"></script>
   </body>
 </html>
